--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
             <h1>Título do site 2</h1>
         </header>
         <article>
-            <h2>Título do artigo 1</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente enim aliquam amet explicabo quae itaque molestiae error accusamus, nisi nesciunt et dicta beatae accusantium eos. Maxime iure inventore placeat totam!</p>
+            <h2>Curso de HTML5</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente enim aliquam amet explicabo quae itaque molestiae error accusamus, nisi nesciunt et dicta beatae accusantium eos. Maxime iure inventore placeat totam!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dolorum facere, sapiente, nostrum repellat cumque quia doloribus animi dicta non optio, qui maiores tempora dolor dolorem temporibus. Magnam, accusamus ab?
+            </p>
         </article>
         <article>
-            <h2>Título do artigo 2</h2>
+            <h2>Curso de Javascript/h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel alias eos tempora, cum quam modi iure mollitia maiores veniam labore impedit voluptate veritatis hic aliquid, nulla fugit facilis ipsam asperiores!</p>
         </article>
     </main>
