--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </p>
         </article>
         <article>
-            <h2>Curso de Javascript/h2>
+            <h2>Curso de Javascript</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel alias eos tempora, cum quam modi iure mollitia maiores veniam labore impedit voluptate veritatis hic aliquid, nulla fugit facilis ipsam asperiores!</p>
         </article>
     </main>
