--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
-    <title>Meu site de teste 2</title>
+    <title>Cursos do Gustavo Guanabara</title>
 </head>
 <body>
     <main>
